<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>1.0.0</version>
  <description>Receives commands from control room, converts them to the Duckiebot's API and calls the Duckiebot's API</description>
  <maintainer email="tatiana.berlenko@gmail.com">Tatiana Berlenko</maintainer>
  <maintainer email="ilia.nechaev@jetbrains.com">Ilia Nechaev</maintainer>
  <maintainer email="lankford@mit.edu">Gage Lankford</maintainer>
  <license>GPLv3</license>

  <export>
    <build_type>ament_python</build_type>
  </export>

  <depend>duckietown_msgs</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

</package>
